styles/components/menu.css
.admin-edit {
  position: fixed;
  right: 10px;
  bottom: 10px;
  z-index: 1;
  display: flex;
  align-items: center;
  visibility: visible;
  opacity: 1;
  transition: visibility 0s, opacity 0.5s ease;
  color: var(--text-color);
}

.admin-edit__button {
  color: var(--admin-secondary);
  border: 3px solid var(--admin-secondary);
  border-radius: 50%;
  padding: 10px;
  background: var(--admin-primary);
  transition: all .2s ease-in-out;
  display: flex;
  align-items: center;
  opacity: 0.8;
  width: 51px;
  & span {
    display: inline-block;
    height: 24px;
  }
  &:hover {
   transform: scale(1.1);
   background: var(--admin-primary);
 }
  &:active,
  &:focus {
   background: var(--admin-primary);
  }
}

.admin-edit__label {
  border: 1px solid var(--admin-border);
  text-transform: uppercase;
  color: var(--admin-button-text);
  padding: var(--spacing-small);
  margin-right: var(--spacing-medium);
}

.admin-panel {
  position: fixed;
  top: 0;
  right: -80%;
  right: calc(-300px);
  width: 80%;
  width: calc(300px);
  height: 100%;
  transition: right 0.5s ease;
  z-index: 99;
  background-color: var(--admin-primary);
  color: var(--admin-secondary);
  font-size: 80% !important;
  line-height: 1.5rem;
  padding: 50px var(--spacing-medium);
}

.admin-panel--closed .admin-edit {
  visibility: hidden;
  opacity: 0;
}

button.admin-panel__toggle {
  text-transform: uppercase;
  font-size: 80%;
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
  line-height: 1;
  width: 50px;
  top: 0;
  right: 0;
  transition: all 0.5s ease;
  border: 1px solid var(--admin-border);
  color: var(--admin-button-text);
  background-color: var(--admin-primary);
  &:hover,
  &:active,
  &:focus {
    cursor: cursor;
    background-color: var(--dark-slate);
  }
}

button.admin-panel__open {
  left: -50px;
}
.admin-menu {
  max-height: 100%;
  overflow: auto;
}

.admin-menu--open .admin-panel {
  right: 0px;
}

.admin-menu--open {
  & .page__content,
  & .page__wrapper {
  overflow: auto;
  }
  .admin-panel--closed {
    right: -80%;
    right: calc(-300px);
    & button.admin-edit  {
      position: absolute;
    }
  }
}

.page__content,
.page__wrapper {
  width: 100%;
}

.admin-menu__toolbar-top {
  & button {
    margin: var(--spacing-small) 0;
  }
}

.admin-menu__header {
  display: flex;
  justify-content: space-between;
  padding-bottom: var(--spacing-small);
  align-items: center;
  border-bottom: 1px solid var(--admin-border);
}

.admin-menu__publisher-info {
  & dd,
  & dt {
    word-break: break-all;
  }
  & dt {
    display: inline-block;
    width: 100px;
  }
}

.admin-menu__publisher-role {
  text-transform: capitalize;
  & ~ .admin-menu__publisher-role {
    margin-left: 105px;;
  }
}

.admin-menu__log-out {
  padding: 5px;
  text-decoration: none;
  & i {
    display: block;
  }
}

.admin-menu__header-avatar {
  margin-right: var(--spacing-medium);
  width: 48px;
  height: 48px;
  border: 3px solid white;
}
.admin-menu__edit,
.admin-menu__site-info,
.admin-menu__preview {
  margin-top: var(--spacing-small);
}

.admin-menu__page-info {
  font-size: 80%;
  line-height: 1rem;
}

.admin-menu__title {
  border-bottom: 1px solid var(--admin-border);
  text-transform: uppercase;
  color: var(--admin-button-text);
}

.admin-menu__actions {
  padding-left: var(--spacing-large);
  padding-top: var(--spacing-small);
  & .admin-menu__item-button {
    border: none;
    margin: var(--spacing-small) 0;
    & .material-icons {
      padding: var(--spacing-small);
    }
  }
}

.admin-menu__page-info-wrapper {
  display: flex;
  align-items: flex-start;
  & .admin-menu__favourite {
    margin-right: var(--spacing-large);
  }
}

.admin-menu__page-info-uri {
  color: var(--admin-button-text);
}

.admin-menu__content-status {
  display: flex;
  align-items: center;
  justify-content: center;
  color: var(--peach);
}

.admin-menu__about-page {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-bottom: var(--spacing-small);
  border-bottom: 1px solid var(--admin-border);
}

.admin_menu__add-section-container {
  margin-top: var(--spacing-small);
}

.admin-menu__notification {
  padding: var(--spacing-large);
}

.admin-menu__notification-icon {
  margin-right: var(--spacing-small);
  margin-top: 4px;
}

@media (--breakpoint-md) {
  .admin-menu__toolbar-top {
    & button {
      margin: var(--spacing-medium) 0;
    }
  }
  .admin-edit {
    right: 20px;
    bottom: 20px;
  }

  .admin-menu__header-avatar {
    margin-right: var(--spacing-medium);
    width: 32px;
    height: 32px;
    border: 1px solid white;
    vertical-align: middle;
    display: inline-block;
  }
  .admin-edit__button {
    padding: 15px;
    width: 61px;
  }
    
  .admin-menu--open .admin-panel {
    width: 35%;
    width: calc(350px);
  }

  .admin-menu--open .admin-panel--closed {
    right: calc(-350px);
  }

  .admin-menu--open .page__content,
  .admin-menu--open .page__wrapper {
    width: 65%;
    width: calc(100% - 350px);
    transition: width 0.65s ease;
  }

  .admin-menu {
    margin-top: 0;
  }

  .admin_menu__add-section-container {
    margin-top: var(--spacing-small);
  }

}

